tests/ui/parser/transient.stderr
error: No visibility specified. Did you intend to add public?
  --> ROOT/tests/ui/parser/transient.sol:LL:CC
   |
LL |     function f(uint256 transient) {
   |              ^
   |

error: No visibility specified. Did you intend to add public?
  --> ROOT/tests/ui/parser/transient.sol:LL:CC
   |
LL |     function f2(uint256 transient, bool) {
   |              ^^
   |

error: No visibility specified. Did you intend to add public?
  --> ROOT/tests/ui/parser/transient.sol:LL:CC
   |
LL |     function g(uint256 transient transient) {
   |              ^
   |

error: No visibility specified. Did you intend to add public?
  --> ROOT/tests/ui/parser/transient.sol:LL:CC
   |
LL |     function g2(uint256[] transient transient) {
   |              ^^
   |

error: aborting due to 4 previous errors

